recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:24: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:38: error: expected start of definition
	override def run() {
                 ^Tree:42: error: Unmatched closing brace '}' ignored here
}
^